--- a/ElStudio/Base.lproj/Main.storyboard
+++ b/ElStudio/Base.lproj/Main.storyboard
@@ -78,10 +78,10 @@
             </objects>
             <point key="canvasLocation" x="448" y="835"/>
         </scene>
-        <!--View Controller-->
+        <!--Show Images View Controller-->
         <scene sceneID="nGW-tG-XZA">
             <objects>
-                <viewController id="ynv-tx-TWD" sceneMemberID="viewController">
+                <viewController id="ynv-tx-TWD" customClass="ShowImagesViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="QmD-T2-rGP"/>
                         <viewControllerLayoutGuide type="bottom" id="L5j-jA-RlX"/>
@@ -89,13 +89,32 @@
                     <view key="view" contentMode="scaleToFill" id="vyw-qH-69w">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="hpp-s3-cxC">
+                                <rect key="frame" x="16" y="64" width="568" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="ynv-tx-TWD" id="EOP-c9-4Ea"/>
+                                    <outlet property="delegate" destination="ynv-tx-TWD" id="PkA-rD-sgg"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="L5j-jA-RlX" firstAttribute="top" secondItem="hpp-s3-cxC" secondAttribute="bottom" id="1f8-A7-Ip0"/>
+                            <constraint firstItem="hpp-s3-cxC" firstAttribute="leading" secondItem="vyw-qH-69w" secondAttribute="leadingMargin" id="Av7-bN-Jth"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="hpp-s3-cxC" secondAttribute="trailing" id="d37-oM-7Y8"/>
+                            <constraint firstItem="hpp-s3-cxC" firstAttribute="top" secondItem="QmD-T2-rGP" secondAttribute="bottom" id="fMO-Yw-lEL"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="wIN-1X-xLX"/>
+                    <connections>
+                        <outlet property="tableView" destination="hpp-s3-cxC" id="jsb-2c-845"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jPl-cg-S8H" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1197" y="835"/>
+            <point key="canvasLocation" x="1291" y="779"/>
         </scene>
     </scenes>
 </document>
