--- a/ElStudio/Base.lproj/Main.storyboard
+++ b/ElStudio/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="QNw-LM-SKW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="QNw-LM-SKW">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -107,7 +107,13 @@
                             <constraint firstItem="hpp-s3-cxC" firstAttribute="top" secondItem="QmD-T2-rGP" secondAttribute="bottom" id="fMO-Yw-lEL"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="wIN-1X-xLX"/>
+                    <navigationItem key="navigationItem" id="wIN-1X-xLX">
+                        <barButtonItem key="rightBarButtonItem" title="Upload" id="Oth-W2-XBJ">
+                            <connections>
+                                <action selector="uploadfile:" destination="ynv-tx-TWD" id="4GT-08-EPM"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="hpp-s3-cxC" id="jsb-2c-845"/>
                         <segue destination="U5m-ge-Ig6" kind="push" identifier="GoToAffineImage" id="IWU-cr-Vnl"/>
