--- a/ElStudio/Base.lproj/Main.storyboard
+++ b/ElStudio/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="QNw-LM-SKW">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="QNw-LM-SKW">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -20,7 +20,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="33o-mN-lby" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-269" y="827"/>
+            <point key="canvasLocation" x="-143.46666666666667" y="782.89333333333332"/>
         </scene>
         <!--Make Order View Controller-->
         <scene sceneID="pUf-S1-LS3">
@@ -31,11 +31,11 @@
                         <viewControllerLayoutGuide type="bottom" id="UCS-mV-Flh"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="eBf-pw-ifr">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XF6-kj-jix">
-                                <rect key="frame" x="195" y="285" width="211" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XF6-kj-jix">
+                                <rect key="frame" x="55" y="211" width="211" height="30"/>
                                 <state key="normal" title="Pick">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -43,31 +43,19 @@
                                     <action selector="upload" destination="Otx-Jd-g8A" eventType="touchUpInside" id="v0p-zt-jxx"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="WWM-bd-PoR">
-                                <rect key="frame" x="180" y="334" width="240" height="128"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="0D8-Ge-LLt"/>
-                                    <constraint firstAttribute="width" constant="240" id="3c3-SM-tYL"/>
-                                </constraints>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WWM-bd-PoR">
+                                <rect key="frame" x="40" y="270" width="240" height="128"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z2Y-pz-hKu">
-                                <rect key="frame" x="256" y="486" width="88" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z2Y-pz-hKu">
+                                <rect key="frame" x="135" y="425" width="51" height="30"/>
                                 <state key="normal" title="Update">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="z2Y-pz-hKu" firstAttribute="top" secondItem="WWM-bd-PoR" secondAttribute="bottom" constant="24" id="1Iy-cP-P63"/>
-                            <constraint firstAttribute="centerX" secondItem="WWM-bd-PoR" secondAttribute="centerX" id="AgW-ML-0jS"/>
-                            <constraint firstAttribute="centerX" secondItem="XF6-kj-jix" secondAttribute="centerX" id="Drq-Cp-yo3"/>
-                            <constraint firstAttribute="centerY" secondItem="XF6-kj-jix" secondAttribute="centerY" id="Xkf-V2-Bwg"/>
-                            <constraint firstItem="WWM-bd-PoR" firstAttribute="top" secondItem="XF6-kj-jix" secondAttribute="bottom" constant="19" id="ZT4-RH-IJS"/>
-                            <constraint firstItem="z2Y-pz-hKu" firstAttribute="leading" secondItem="eBf-pw-ifr" secondAttribute="leadingMargin" constant="240" id="d6j-wL-WLt"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="z2Y-pz-hKu" secondAttribute="trailing" constant="240" id="eN2-Fy-zGF"/>
-                        </constraints>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
                     <navigationItem key="navigationItem" id="JpR-X3-nhr"/>
                     <connections>
                         <outlet property="myimg" destination="WWM-bd-PoR" id="Swr-d0-sdX"/>
@@ -76,7 +64,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pYd-wl-wR8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="448" y="835"/>
+            <point key="canvasLocation" x="238.93333333333334" y="790.4666666666667"/>
         </scene>
         <!--Show Images View Controller-->
         <scene sceneID="nGW-tG-XZA">
@@ -87,11 +75,11 @@
                         <viewControllerLayoutGuide type="bottom" id="L5j-jA-RlX"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="vyw-qH-69w">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="187" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="hpp-s3-cxC">
-                                <rect key="frame" x="16" y="64" width="568" height="536"/>
+                                <rect key="frame" x="16" y="0.0" width="288" height="504"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="ynv-tx-TWD" id="EOP-c9-4Ea"/>
@@ -107,6 +95,7 @@
                             <constraint firstItem="hpp-s3-cxC" firstAttribute="top" secondItem="QmD-T2-rGP" secondAttribute="bottom" id="fMO-Yw-lEL"/>
                         </constraints>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
                     <navigationItem key="navigationItem" id="wIN-1X-xLX">
                         <barButtonItem key="rightBarButtonItem" title="Upload" id="Oth-W2-XBJ">
                             <connections>
@@ -121,7 +110,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jPl-cg-S8H" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1257" y="785"/>
+            <point key="canvasLocation" x="670.39999999999998" y="743.13333333333333"/>
         </scene>
         <!--Affine Image View Controller-->
         <scene sceneID="H4O-Jw-agr">
@@ -132,11 +121,11 @@
                         <viewControllerLayoutGuide type="bottom" id="cxK-ye-hj7"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="pas-M0-DHI">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hfY-dd-CcR">
-                                <rect key="frame" x="225" y="225" width="150" height="150"/>
+                                <rect key="frame" x="85" y="209" width="150" height="150"/>
                                 <subviews>
                                     <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CJ2-6F-h1N">
                                         <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
@@ -178,7 +167,12 @@
                 </pinchGestureRecognizer>
                 <rotationGestureRecognizer id="Y5H-6q-pft"/>
             </objects>
-            <point key="canvasLocation" x="1291" y="1539"/>
+            <point key="canvasLocation" x="688.5333333333333" y="1456.9200000000001"/>
         </scene>
     </scenes>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
