--- a/ElStudio/Base.lproj/Main.storyboard
+++ b/ElStudio/Base.lproj/Main.storyboard
@@ -167,7 +167,7 @@
                     <navigationItem key="navigationItem" id="wIN-1X-xLX">
                         <barButtonItem key="rightBarButtonItem" title="Done" id="Oth-W2-XBJ">
                             <connections>
-                                <segue destination="P0D-4k-HJL" kind="push" identifier="GoToOrderItemThankYou" id="k2s-QU-T9W"/>
+                                <segue destination="P0D-4k-HJL" kind="modal" identifier="GoToOrderItemThankYou" id="k2s-QU-T9W"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -189,7 +189,7 @@
                         <viewControllerLayoutGuide type="bottom" id="Qad-Po-1YB"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="RaX-qd-PBS">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Success" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OCG-co-iHl">
